--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=8000 
 DATABASE=mongodb+srv://satyamnikhil1523:<PASSWORD>@cluster0.onhlgkf.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=MBa9_-Hd$2HAW6h
+
+JWT_SECRET=name-nikhil-jainagar-lpu-btech--
+JWT_EXPIRES_IN=60d 
