--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^5.13.17",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.3",
     "slugify": "^1.6.6",
     "validator": "^13.9.0"
   },
