--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.1",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
     "js": "^0.1.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^5.13.17",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.3",
     "slugify": "^1.6.6",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "eslint": "^8.43.0",
