production mode email functionality added

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-rate-limit": "^6.7.1",
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "js": "^0.1.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^5.13.17",
