--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
+    "nodemailer-brevo-transport": "^2.0.1",
     "pug": "^3.0.2",
     "sharp": "^0.32.4",
     "slugify": "^1.6.6",
